--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,3 +7,12 @@ test_script:
 
 build_script:
 - dotnet build ./src/ -v m -c Release
+
+deploy:
+  provider: NuGet
+  server:                  # remove to push to NuGet.org
+  api_key:
+    secure: EBAvPnMs/+UOBs8EEz0DGyOvFXDxkEACjlwcOTvEorxy0we5SHLwfELS+cox2aFw
+  skip_symbols: false
+  symbol_server:           # remove to push symbols to SymbolSource.org
+  artifact: /.*\.nupkg/
