--- a/src/Fls.Results/Fls.Results.csproj
+++ b/src/Fls.Results/Fls.Results.csproj
@@ -7,7 +7,7 @@
     <IncludeSource>true</IncludeSource>
     <PackageId>FlsResults</PackageId>
     <Title>Project FlsResults</Title>
-    <Version>1.0.0</Version>
+    <Version>$(APPVEYOR_BUILD_VERSION)</Version>
     <Authors>FirstLine Net Core Practice Team</Authors>
     <Company>FirstLine Software</Company>
     <license>https://raw.githubusercontent.com/vkamiansky/results/master/LICENSE</license>
