--- a/src/Fls.Results/Fls.Results.csproj
+++ b/src/Fls.Results/Fls.Results.csproj
@@ -1,22 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard1.0</TargetFramework>
 
     <IncludeSymbols>true</IncludeSymbols>
     <IncludeSource>true</IncludeSource>
-    <PackageId>FlsResults</PackageId>
-    <Title>Project FlsResults</Title>
+    <PackageId>Fls.Results</PackageId>
+    <Title>Fls.Results</Title>
     <Version>$(APPVEYOR_BUILD_VERSION)</Version>
-    <Authors>FirstLine Net Core Practice Team</Authors>
+    <Authors>FirstLine Software .Net Core Practice Team</Authors>
     <Company>FirstLine Software</Company>
     <license>https://raw.githubusercontent.com/vkamiansky/results/master/LICENSE</license>
     <PackageProjectUrl>https://github.com/vkamiansky/results</PackageProjectUrl>
-    <PackageTags>study;practice;</PackageTags>
+    <PackageTags>c#;result;railroad</PackageTags>
     <RepositoryUrl>https://github.com/vkamiansky/results.git</RepositoryUrl>
     <Description>A C# framework for building railroad-oriented code with results.</Description>
     <Copyright>Copyright (c) 2020, FirstLine Net Core Practice Team</Copyright>
 
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 </Project>
