Fixes in <Copyright> block

--- a/src/Fls.Results/Fls.Results.csproj
+++ b/src/Fls.Results/Fls.Results.csproj
@@ -13,6 +13,6 @@
     <PackageTags>c#;result;railroad</PackageTags>
     <RepositoryUrl>https://github.com/vkamiansky/results.git</RepositoryUrl>
     <Description>A C# framework for building railroad-oriented code with results.</Description>
-    <Copyright>Copyright (c) 2020, FirstLine Net Core Practice Team</Copyright>
+    <Copyright>Copyright (c) 2020, FirstLine Software .Net Core Practice Team</Copyright>
   </PropertyGroup>
 </Project>
