Nuke build scenarios fixed
Nuke build changed to handle package building and deployment scenarios. Versions of referenced packages have been updated.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,27 +1,16 @@
 version: 1.0.{build}
 
-configuration: Release
+environment:
+  NUGET_KEY:
+    secure: yTJOXDOWg52hjjJFxtJNqq0uRfi8pHiC2ilKFXsJoDT6XjM13bRgvSyYaf4z9wJe
 
 image: Ubuntu
 
 test_script:
-- dotnet test ./src/
+- ./build.ps1 --target test
 
 build_script:
-- dotnet build ./src/ -v m -c Release
+- ./build.ps1 --target compile --configuration release
 
-after_build:
-  -  dotnet pack ./src/Fls.Results --no-build
-
-artifacts:
-- path: '**\*.nupkg'
-  name: NuGet
-
-deploy:
-- provider: NuGet
-  server: NuGet.org
-  api_key:
-    secure: yTJOXDOWg52hjjJFxtJNqq0uRfi8pHiC2ilKFXsJoDT6XjM13bRgvSyYaf4z9wJe
-  on:
-    branch: master
-    appveyor_repo_tag: true
+deploy_script:
+- ./build.ps1 --target publish --nuget-key $env:NUGET_KEY
