Trying to fix appveyor.yml part 2

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,10 +7,10 @@ environment:
 image: Ubuntu
 
 test_script:
-- sudo ./build.ps1 --target test
+- ./build.sh --target test
 
 build_script:
-- sudo ./build.ps1 --target compile --configuration release
+- ./build.sh --target compile --configuration release
 
 deploy_script:
-- sudo ./build.ps1 --target publish --nuget-key $env:NUGET_KEY
+- ./build.sh --target publish --nuget-key $env:NUGET_KEY
