--- a/src/Fls.Results/Fls.Results.csproj
+++ b/src/Fls.Results/Fls.Results.csproj
@@ -8,7 +8,7 @@
     <Title>Fls.Results</Title>
     <Authors>FirstLine Software .Net Core Practice Team</Authors>
     <Company>FirstLine Software</Company>
-    <license>https://raw.githubusercontent.com/vkamiansky/results/master/LICENSE</license>
+    <PackageLicenseExpression>MIT-0</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/vkamiansky/results</PackageProjectUrl>
     <PackageTags>c#;result;railroad</PackageTags>
     <RepositoryUrl>https://github.com/vkamiansky/results.git</RepositoryUrl>
